Fixed bug with Setup notebook trying to instantiate a PipelineSession as part of the constants file

--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "28642289-bd49-4e8a-a961-55f1db0fd80d",
    "metadata": {
     "tags": []
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "00311496-3a75-4a04-880b-4301a21cb259",
    "metadata": {
     "tags": []
@@ -260,12 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c7b41df5-d6e7-4abe-a04d-8d390a3dea4f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:sagemaker:us-east-1:325223348818:studio-lifecycle-config/packages\n",
+      "{\n",
+      "    \"UserProfileArn\": \"arn:aws:sagemaker:us-east-1:325223348818:user-profile/d-givocgtibv1g/default-1682182522641\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$DOMAIN_ID\" \"$USER_PROFILE\"\n",
     "\n",
@@ -304,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "fb2699a8-1b33-454e-8b62-9b4a2df03bef",
    "metadata": {
     "tags": []
@@ -408,23 +419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fe4704df-af6a-4c38-8c74-bb690c9f1066",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arn:aws:sagemaker:us-east-1:325223348818:studio-lifecycle-config/autoshutdown\n",
-      "{\n",
-      "    \"UserProfileArn\": \"arn:aws:sagemaker:us-east-1:325223348818:user-profile/d-givocgtibv1g/default-1682182522641\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash -s \"$DOMAIN_ID\" \"$USER_PROFILE\"\n",
     "\n",
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b99593fe-d51a-4593-9741-a43a44a2d174",
    "metadata": {
     "tags": []
@@ -505,7 +505,6 @@
     "import sagemaker\n",
     "\n",
     "from pathlib import Path\n",
-    "from sagemaker.workflow.pipeline_context import PipelineSession\n",
     "\n",
     "\n",
     "BUCKET = \"mlschool\"\n",
@@ -520,8 +519,7 @@
     "iam_client = boto3.client(\"iam\")\n",
     "role = sagemaker.get_execution_role()\n",
     "region = boto3.Session().region_name\n",
-    "sagemaker_session = sagemaker.session.Session()\n",
-    "pipeline_session = PipelineSession()"
+    "sagemaker_session = sagemaker.session.Session()"
    ]
   },
   {
@@ -544,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "b25f27ec-0ce9-4055-adde-270608a9c331",
    "metadata": {
     "tags": []
@@ -576,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "26015474-05db-49ce-8621-5f550703d68b",
    "metadata": {
     "tags": []
@@ -588,7 +586,7 @@
        "'s3://mlschool/penguins/data.csv'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "282181eb-fdb0-498b-b6ca-12096fe5f9ac",
    "metadata": {
     "tags": []
@@ -802,7 +800,7 @@
        "[344 rows x 7 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1412,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
   },
-  "lcc_arn": "arn:aws:sagemaker:us-east-1:325223348818:studio-lifecycle-config/packages",
   "toc-autonumbering": false,
   "toc-showcode": false,
   "toc-showmarkdowntxt": false
