Finished S3 Q's and A's. Changed alert colors.

--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -40,7 +40,7 @@
    "id": "78e86c92-8c57-4b4c-b6a8-1b8246dedf2a",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><strong>Note:</strong> \n",
+    "<div class=\"alert\" style=\"background-color:#6e420c;\"><strong>Note:</strong> \n",
     "    Update the following constants with your SageMaker <strong>Domain Id</strong> and <strong>User Profile</strong>. You can find them in your Amazon SageMaker dashboard under \"Domains\".\n",
     "</div>"
    ]
@@ -477,7 +477,7 @@
     "* `region`: The current region attached to our session. \n",
     "* `sagemaker_session`: The current SageMaker session.\n",
     "\n",
-    "<div class=\"alert alert-info\"><strong>Note:</strong> \n",
+    "<div class=\"alert\" style=\"background-color:#6e420c;\"><strong>Note:</strong> \n",
     "    Select a unique name for the <strong>BUCKET</strong> constant below.\n",
     "</div>"
    ]
@@ -1394,6 +1394,7 @@
     "vcpuNum": 96
    }
   ],
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
    "language": "python",
