--- a/penguins/penguins-cohort.ipynb
+++ b/penguins/penguins-cohort.ipynb
@@ -11378,7 +11378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 143,
    "id": "52a48cef-fb78-412b-a5c6-977eafe98e27",
    "metadata": {
     "tags": []
@@ -11395,7 +11395,7 @@
    "source": [
     "model = TensorFlowModel(\n",
     "    model_data=(\n",
-    "        tune_model_step.get_top_model_s3_uri(top_k=0, s3_bucket=sagemaker_session.default_bucket())\n",
+    "        tune_model_step.get_top_model_s3_uri(top_k=0, s3_bucket=pipeline_session.default_bucket())\n",
     "        if USE_TUNING_STEP\n",
     "        else train_model_step.properties.ModelArtifacts.S3ModelArtifacts\n",
     "    ),\n",
@@ -13083,7 +13083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 144,
    "id": "8b4efe32-dd1c-4968-a873-c1e4ad21ab00",
    "metadata": {
     "tags": []
@@ -13092,10 +13092,10 @@
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/penguins-session2-pipeline/execution/bit83fds80r7', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x7fcb191f3dc0>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/penguins-session5-pipeline/execution/b0uqrztw5rjc', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x7fcb191f3dc0>)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13104,7 +13104,10 @@
     "# session2_pipeline.start()\n",
     "# session3_pipeline.start()\n",
     "# session4_pipeline.start()\n",
-    "# session5_pipeline.start()\n",
+    "\n",
+    "# The following two pipelines deploy the model to an endpoint.\n",
+    "# Ensure you delete the endpoint when you finish using it.\n",
+    "session5_pipeline.start() \n",
     "# session6_pipeline.start()"
    ]
   },
