--- a/penguins/penguins-endpoint.ipynb
+++ b/penguins/penguins-endpoint.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "09e73d7a-a972-4d75-ae0b-57e69e65580a",
    "metadata": {
     "tags": []
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7a118412-1ce3-4db1-821a-4e7c73772361",
    "metadata": {
     "tags": []
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "dd1b8372-b9d7-43cc-b2b1-c45a1983252a",
    "metadata": {},
    "outputs": [],
@@ -487,17 +487,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d5e83ed2-8f05-4e09-8f7f-acacdb051be0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'prediction': 'Chinstrap', 'confidence': 0.684956968}"
+       "{'prediction': 'Adelie', 'confidence': 0.48664245}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,17 +522,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "640694fd-072c-4dd6-a0a6-558e6d2bc3f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'prediction': 'Gentoo', 'confidence': 0.976749837}"
+       "{'prediction': 'Gentoo', 'confidence': 0.862531245}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d6c375f8-4805-4556-8b8c-cf1267a04f70",
    "metadata": {
     "tags": []
