Added a note regarding the creation of a bucket on a different region

--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -531,7 +531,9 @@
     "\n",
     "Let's now create the S3 bucket where we will organize every resource we are going to use during the program.\n",
     "\n",
-    "If you want to create a bucket in a region other than `us-east-1`, use this command instead:\n",
+    "<div class=\"alert\" style=\"background-color:#6e420c;\"><strong>Note:</strong> \n",
+    "    If you want to create a bucket in a region other than <strong>us-east-1</strong>, you need to use the \"--create-bucket-configuration\" argu\n",
+    "</div>\n",
     "\n",
     "```\n",
     "!aws s3api create-bucket --bucket $BUCKET --create-bucket-configuration LocationConstraint=\"eu-west-1\"\n",
