--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -532,8 +532,10 @@
     "Let's now create the S3 bucket where we will organize every resource we are going to use during the program.\n",
     "\n",
     "<div class=\"alert\" style=\"background-color:#6e420c;\"><strong>Note:</strong> \n",
-    "    If you want to create a bucket in a region other than <strong>us-east-1</strong>, you need to use the \"--create-bucket-configuration\" argu\n",
+    "    If you want to create a bucket in a region other than <strong>us-east-1</strong>, you need to use the \"--create-bucket-configuration\" argument when creating the bucket. You can see an example below.\n",
     "</div>\n",
+    "\n",
+    "Example of how to specify a region different from `us-east-1` when creating a bucket:\n",
     "\n",
     "```\n",
     "!aws s3api create-bucket --bucket $BUCKET --create-bucket-configuration LocationConstraint=\"eu-west-1\"\n",
