--- a/penguins/penguins-cohort.ipynb
+++ b/penguins/penguins-cohort.ipynb
@@ -10494,9 +10494,9 @@
     "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 2.2</strong></span> For this assignment we want to run a distributed Processing Job across multiple instances to process a dataset in parallel. Your dataset will consist of 10 different files stored in S3. Set up a Processing Job using 2 instances. When specifying the input to the Processing Job, you need to set the `ProcessingInput.s3_data_distribution_type` attribute to `ShardedByS3Key`. By doing this, SageMaker should run a cluster with two instances simultaneously, each with access to half the files.\n",
     "\n",
     "\n",
-    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 2.3</strong></span> We used an instance of [`SKLearnProcessor`](https://sagemaker.readthedocs.io/en/stable/frameworks/sklearn/sagemaker.sklearn.html#scikit-learn-processor) to run the preprocessing script, but there's no way to add dependencies to the processing container. Modify the code to use an instance of [`FrameworkProcessor`](https://sagemaker.readthedocs.io/en/stable/api/training/processing.html#sagemaker.processing.FrameworkProcessor) instead. This class will allow you to specify a directory containing a `requirements.txt` file containing the list of dependencies that will be installed in the target containerprior to triggering processing job.\n",
+    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 2.3</strong></span> We used an instance of [`SKLearnProcessor`](https://sagemaker.readthedocs.io/en/stable/frameworks/sklearn/sagemaker.sklearn.html#scikit-learn-processor) to run the preprocessing script, but there's no way to add dependencies to the processing container. Modify the code to use an instance of [`FrameworkProcessor`](https://sagemaker.readthedocs.io/en/stable/api/training/processing.html#sagemaker.processing.FrameworkProcessor) instead. This class will allow you to specify a directory containing a `requirements.txt` file containing the list of dependencies that will be installed in the target container prior to triggering processing job.\n",
     "\n",
-    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 2.4</strong></span> We want to execute the pipeline whenever the dataset changes. To do this, create a Lambda function that executes the pipeline using boto3's [`start_pipeline_execution`](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker/client/start_pipeline_execution.html) function. Setup an event in S3 to run this Lambda function whenever the data changes. Check [Using an Amazon S3 trigger to invoke a Lambda function](https://docs.aws.amazon.com/lambda/latest/dg/with-s3-example.html) for a tutorial on how to call a function from an S3 trigger.\n",
+    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 2.4</strong></span> We want to execute the pipeline whenever the dataset changes. We can accomplish this by using [Amazon EventBridge](https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-what-is.html). Configure an event to automatically start the pipeline when a new file is added to the S3 bucket where we store our dataset. Check [Amazon EventBridge Integration](https://docs.aws.amazon.com/sagemaker/latest/dg/pipeline-eventbridge.html) for a tutorial on how to implement this.\n",
     "\n",
     "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 2.5</strong></span> Throughout this program, you will work on the \"Pipeline of Digits\" project to set up a SageMaker pipeline for a simple computer vision project. For this assignment, open the [mnist.ipynb](../mnist/mnist.ipynb) notebook and follow the instructions to prepare everything you need to start the project. Set up a SageMaker pipeline with a Processing Step where you split 20% off the train set to use as a validation set."
    ]
@@ -12973,7 +12973,7 @@
     "\n",
     "## Assignments\n",
     "\n",
-    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 5.1</strong></span> We built a custom inference script to handle the input and output of the endpoint. However, this custom code doesn't support processing more than one sample simultaneously. Modify the inference script to allow the processing of multiple samples in a single request. The output should be a JSON containing an array of objects with the prediction and the confidence corresponding to each input sample.\n",
+    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 5.1</strong></span> Every Endpoint has an invocati\n",
     "\n",
     "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 5.2</strong></span> We can use model variants to perform A/B testing between a new model and an old model. Create a function that given the ARN of two models in the Model Registry deploys them to an Endpoint as separate variants. Each variant should receive 50% of the traffic. Write another function that invokes the endpoint by default, but allows the caller to invoke a specific variant if they want to.\n",
     "\n",
@@ -13340,7 +13340,7 @@
    "source": [
     "## Step 5 - Setting up Model Metrics\n",
     "\n",
-    "We can configure a new set of [ModelMetrics](https://sagemaker.readthedocs.io/en/stable/api/inference/model_monitor.html#sagemaker.model_metrics.ModelMetrics) using the results of the Data and Model Quality Steps."
+    "We can configure a new set of [ModelMetrics](https://sagemaker.readthedocs.io/en/stable/api/inference/model_monitor.html#sagemaker.model_metrics.ModelMetrics) using the results of the Data and Model Quality Steps. Check [Baseline and model version lifecycle and evolution with SageMaker Pipelines](https://docs.aws.amazon.com/sagemaker/latest/dg/pipelines-quality-clarify-baseline-lifecycle.html#pipelines-quality-clarify-baseline-evolution) for an explanation of how SageMaker uses the `DriftCheckBaselines`."
    ]
   },
   {
@@ -13370,6 +13370,25 @@
     "        s3_uri=model_quality_baseline_step.properties.CalculatedBaselineConstraints,\n",
     "        content_type=\"application/json\",\n",
     "    ),\n",
+    ")\n",
+    "\n",
+    "drift_check_baselines = DriftCheckBaselines(\n",
+    "    model_data_statistics=MetricsSource(\n",
+    "        s3_uri=data_quality_baseline_step.properties.BaselineUsedForDriftCheckStatistics,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_data_constraints=MetricsSource(\n",
+    "        s3_uri=data_quality_baseline_step.properties.BaselineUsedForDriftCheckConstraints,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_statistics=MetricsSource(\n",
+    "        s3_uri=model_quality_baseline_step.properties.BaselineUsedForDriftCheckStatistics,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_constraints=MetricsSource(\n",
+    "        s3_uri=model_quality_baseline_step.properties.BaselineUsedForDriftCheckConstraints,\n",
+    "        content_type=\"application/json\",\n",
+    "    )\n",
     ")"
    ]
   },
@@ -13398,6 +13417,7 @@
     "    step_args=model.register(\n",
     "        model_package_group_name=MODEL_PACKAGE_GROUP,\n",
     "        model_metrics=model_metrics,\n",
+    "        drift_check_baselines=drift_check_baselines,\n",
     "        approval_status=\"Approved\",\n",
     "        content_types=[\"application/json\"],\n",
     "        response_types=[\"application/json\"],\n",
@@ -15815,13 +15835,13 @@
     "\n",
     "## Assignments\n",
     "\n",
-    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 6.1</strong></span> TBD\n",
+    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 6.1</strong></span> We built a custom inference script to handle the input and output of our endpoint. However, this custom code doesn't support processing more than one sample simultaneously. Modify the inference script to allow the processing of multiple samples in a single request. The output should be a JSON containing an array of objects with the prediction and the confidence corresponding to each input sample.\n",
     "\n",
-    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 6.2</strong></span> TBD\n",
+    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 6.2</strong></span> You can visualize the results of your monitoring jobs in Amazon SageMaker Studio. Go to your endpoint, and visit the Data quality and Model quality tabs. View the details of your monitoring jobs, and create a few charts to explore the baseline and the captured values for any metric that the monitoring job calculates.\n",
     "\n",
-    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 6.3</strong></span> TBD\n",
+    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 6.3</strong></span> The QualityCheck Step runs a processing job to compute baseline statistics and constraints from the input dataset. We configured the pipeline to generate the initial baselines every time it runs. Modify the code to prevent the pipeline from registering a new version of the model if the dataset violates the baseline of the previous model version. You can configure the QualityCheck Step to accomplish this.\n",
     "\n",
-    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 6.4</strong></span> TBD\n",
+    "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 6.4</strong></span> We are generating predictions for the test set twice during the execution of our pipeline. First, in the Evaluation step, and then using a Transform Step in anticipation of generating the baseline to monitor the model. Modify the pipeline to remove the Evaluation step and reuse the metrics computed by the QualityCheck Step to determine whether we should register the model.\n",
     "\n",
     "* <span style=\"padding:4px; background-color: #f2a68a; color: #000;\"><strong>Assignment 6.5</strong></span> Modify the SageMaker Pipeline you created for the \"Pipeline of Digits\" project and add the necessary steps to generate a model quality baseline. Schedule a Model Monitoring Job that reports any violations if there's model drift."
    ]
@@ -16455,7 +16475,6 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
    "language": "python",
