--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -19,14 +19,14 @@
    "id": "78e86c92-8c57-4b4c-b6a8-1b8246dedf2a",
    "metadata": {},
    "source": [
-    "<div class=\"alert\" style=\"background-color:#6e420c;\"><strong>Note:</strong> \n",
+    "<div class=\"alert\" style=\"background-color:#6e420c; color: #fff\"><strong>Note:</strong> \n",
     "    Update the following constants with your SageMaker <strong>Domain Id</strong> and <strong>User Profile</strong>. You can find them in your Amazon SageMaker dashboard under \"Domains\".\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9e7cca6b-3ed1-4dfb-a570-a9d40eb531e0",
    "metadata": {
     "tags": []
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "099706c2-b9a8-471e-a21d-3a132febc184",
    "metadata": {
     "tags": []
@@ -65,7 +65,7 @@
        "'arn:aws:iam::325223348818:role/service-role/AmazonSageMaker-ExecutionRole-20230312T160501'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,11 @@
    "id": "46bc8e33-ea4f-4219-8501-1decad22653a",
    "metadata": {},
    "source": [
-    "Open the Amazon IAM service, find the role and edit the custom Execution Policy assigned to it. You can edit the permissions of the Execution Policy and use the following definition instead:\n",
+    "<div class=\"alert\" style=\"background-color:#6e420c; color: #fff\"><strong>Note:</strong> \n",
+    "    Open the Amazon IAM service, find the role and edit the custom Execution Policy assigned to it. You can edit the permissions of the Execution Policy and use the following definition:\n",
+    "</div>\n",
+    "\n",
+    "\n",
     "\n",
     "```json\n",
     "{\n",
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "00311496-3a75-4a04-880b-4301a21cb259",
    "metadata": {
     "tags": []
@@ -239,23 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c7b41df5-d6e7-4abe-a04d-8d390a3dea4f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arn:aws:sagemaker:us-east-1:325223348818:studio-lifecycle-config/packages\n",
-      "{\n",
-      "    \"UserProfileArn\": \"arn:aws:sagemaker:us-east-1:325223348818:user-profile/d-givocgtibv1g/default-1682182522641\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash -s \"$DOMAIN_ID\" \"$USER_PROFILE\"\n",
     "\n",
@@ -1021,6 +1014,7 @@
     "vcpuNum": 96
    }
   ],
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
    "language": "python",
