--- a/penguins/future.ipynb
+++ b/penguins/future.ipynb
@@ -9648,14 +9648,6 @@
     "    baseline_path.mkdir(parents=True, exist_ok=True)\n",
     "    df_test.to_csv(baseline_path / \"baseline.csv\", header=False, index=False)\n",
     "    \n",
-    "#     for split, data in [(\"train\", df_train), (\"test\", df_test)]:\n",
-    "#         baseline_path = Path(base_directory) / f\"{split}-baseline\"\n",
-    "#         baseline_path.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "#         df = data.copy().dropna()\n",
-    "#         df.to_csv(baseline_path / f\"{split}-baseline.csv\", header=False, index=False)\n",
-    "        \n",
-    "    \n",
     "    y_train = target_transformer.fit_transform(np.array(df_train.species.values).reshape(-1, 1))\n",
     "    y_validation = target_transformer.transform(np.array(df_validation.species.values).reshape(-1, 1))\n",
     "    y_test = target_transformer.transform(np.array(df_test.species.values).reshape(-1, 1))\n",
@@ -9703,31 +9695,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 342,
-   "id": "34fc55ac-6c3e-4aef-ae56-03bf066ad27e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from sklearn.compose import ColumnTransformer, make_column_selector\n",
-    "# from sklearn.impute import SimpleImputer\n",
-    "# from sklearn.pipeline import Pipeline, make_pipeline\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "# from sklearn.preprocessing import OneHotEncoder, StandardScaler, OrdinalEncoder\n",
-    "\n",
-    "\n",
-    "# target_transformer = ColumnTransformer(\n",
-    "#     transformers=[(\"species\", OrdinalEncoder(), [0])]\n",
-    "# )\n",
-    "\n",
-    "# target_transformer.fit_transform(np.array(penguins.species.values).reshape(-1, 1))\n",
-    "\n",
-    "# target_transformer.transform([[\"Adelie\"]])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "214fbdcb-8ee8-4104-bcd3-d7329693299e",
    "metadata": {},
@@ -9769,6 +9736,47 @@
     "    )\n",
     "    \n",
     "    print(f\"output: {os.listdir(directory)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "id": "2899412e-7e90-4a94-ae72-29df8071b112",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import ipytest\n",
+    "ipytest.autoconfig(raise_on_error=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "id": "066b5ebb-90c8-49cd-9e34-7fde31412150",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                                                           [100%]\u001b[0m\n",
+      "\u001b[32m\u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.05s\u001b[0m\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%ipytest\n",
+    "\n",
+    "def test_example():\n",
+    "    assert [1, 2, 3] == [1, 2, 3]\n",
+    "    \n",
+    "def test_second():\n",
+    "    # assert False\n",
+    "    assert True"
    ]
   },
   {
@@ -9859,7 +9867,9 @@
     "            ProcessingOutput(output_name=\"validation\", source=\"/opt/ml/processing/validation\"),\n",
     "            ProcessingOutput(output_name=\"test\", source=\"/opt/ml/processing/test\"),\n",
     "            ProcessingOutput(output_name=\"model\", source=\"/opt/ml/processing/model\"),\n",
-    "            # ProcessingOutput(output_name=\"train-baseline\", source=\"/opt/ml/processing/train-baseline\"),\n",
+    "            \n",
+    "            # The baseline output points to the test set before transforming the data. This set\n",
+    "            # will be helpful to generate a quality baseline for the model performance.\n",
     "            ProcessingOutput(output_name=\"baseline\", source=\"/opt/ml/processing/baseline\"),\n",
     "        ]\n",
     "    ),\n",
@@ -11326,34 +11336,7 @@
     "    Preprocess the input using the transformer.\n",
     "    \"\"\"\n",
     "    \n",
-    "#     target = None\n",
-    "#     if \"species\" in input_data:\n",
-    "#         target = np.array(input_data[\"species\"]).reshape(-1, 1)\n",
-    "#         print(\"This is the target data\", target)\n",
-    "        \n",
-    "#         input_data = input_data.drop(\"species\", axis=1)\n",
-    "        \n",
-    "    features = model.transform(input_data)\n",
-    "        \n",
-    "#     if target:\n",
-    "#         print(\"Ready to transform target\", target)\n",
-    "#         target_transformer = model[\"target_transformer\"]\n",
-    "#         target = target_transformer.transform(target)\n",
-    "#         return np.hstack((target, features))  \n",
-    "    \n",
-    "#     if \"species\" in input_data:\n",
-    "#         print(\"Species is included in the input_data\")\n",
-    "        \n",
-    "#         target = np.array(input_data[\"species\"]).reshape(-1, 1)\n",
-    "        \n",
-    "#         print(\"I reshaped the target. This is what it looks like now:\", target)\n",
-    "        \n",
-    "#         target_transformer = model[\"target_transformer\"]\n",
-    "#         target = target_transformer.transform(target)\n",
-    "        \n",
-    "#         return np.hstack((target, features))\n",
-    "    \n",
-    "    return features\n",
+    "    return model.transform(input_data)\n",
     "\n",
     "\n",
     "def model_fn(model_dir):\n",
@@ -11361,17 +11344,12 @@
     "    Deserializes the model that will be used in this container.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # return {\n",
-    "    #     \"target_transformer\": joblib.load(os.path.join(model_dir, \"target.joblib\")),\n",
-    "    #     \"features_transformer\": joblib.load(os.path.join(model_dir, \"features.joblib\")),\n",
-    "    # }\n",
-    "    \n",
     "    return joblib.load(os.path.join(model_dir, \"features.joblib\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 407,
    "id": "6a9fbf80-7230-403e-b160-97a55cfc5ebf",
    "metadata": {
     "tags": []
@@ -11381,12 +11359,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting code/inference/test_preprocess_model.py\n"
+      "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                                                       [100%]\u001b[0m\n",
+      "\u001b[32m\u001b[32m\u001b[1m6 passed\u001b[0m\u001b[32m in 0.08s\u001b[0m\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "%%writefile {INFERENCE_CODE_FOLDER}/test_preprocess_model.py\n",
+    "%%ipytest\n",
+    "\n",
     "import json\n",
     "import numpy as np\n",
     "\n",
@@ -11479,7 +11459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 404,
    "id": "cc2f9bef-7356-4931-84d4-6e15b75bec4c",
    "metadata": {},
    "outputs": [
@@ -11521,8 +11501,6 @@
     "\n",
     "\n",
     "def input_fn(input_data, content_type):\n",
-    "    print(\"INPUT_FN\", input_data, content_type)\n",
-    "    \n",
     "    if content_type == \"application/json\":\n",
     "        predictions = json.loads(input_data)[\"predictions\"]\n",
     "        return predictions\n",
@@ -11532,8 +11510,6 @@
     "\n",
     "\n",
     "def output_fn(prediction, accept):\n",
-    "    print(\"OUTPUT_FN\", prediction, accept)\n",
-    "    \n",
     "    if accept == \"text/csv\":\n",
     "        return worker.Response(encoders.encode(prediction, accept), mimetype=accept) if worker else (prediction, accept)\n",
     "    \n",
@@ -11554,6 +11530,7 @@
     "    \"\"\"\n",
     "    Transforms the prediction into its corresponding category.\n",
     "    \"\"\"\n",
+    "    \n",
     "    predictions = np.argmax(input_data, axis=-1)\n",
     "    confidence = np.max(input_data, axis=-1)\n",
     "    return [(confidence, model[prediction]) for confidence, prediction in zip(confidence, predictions)]\n",
@@ -11570,7 +11547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 405,
    "id": "67939f4d-e4f1-4eaa-bae8-5ef228d30fb2",
    "metadata": {
     "tags": []
@@ -11580,12 +11557,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting code/inference/test_postprocess_model.py\n"
+      "\u001b[32m.\u001b[0m\u001b[32m                                                                                            [100%]\u001b[0m\n",
+      "\u001b[32m\u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.06s\u001b[0m\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "%%writefile {INFERENCE_CODE_FOLDER}/test_postprocess_model.py\n",
+    "%%ipytest\n",
+    "\n",
     "import json\n",
     "import numpy as np\n",
     "\n",
@@ -11608,34 +11587,6 @@
     "        (0.8, \"Gentoo\"),\n",
     "        (0.7, \"Chinstrap\")\n",
     "    ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 371,
-   "id": "b3066c88-7609-4f73-9a12-65732f4edb88",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform linux -- Python 3.8.2, pytest-7.4.2, pluggy-1.3.0\n",
-      "rootdir: /root/ml.school/penguins\n",
-      "collected 7 items                                                              \u001b[0m\u001b[1m\n",
-      "\n",
-      "code/inference/test_postprocess_model.py \u001b[32m.\u001b[0m\n",
-      "code/inference/test_preprocess_model.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\n",
-      "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m7 passed\u001b[0m\u001b[32m in 1.60s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pytest -s $INFERENCE_CODE_FOLDER"
    ]
   },
   {
@@ -15934,7 +15885,6 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
    "language": "python",
