--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9e7cca6b-3ed1-4dfb-a570-a9d40eb531e0",
    "metadata": {
     "tags": []
@@ -230,7 +230,8 @@
     "pip install -q --upgrade awscli boto3\n",
     "pip install -q --upgrade scikit-learn==0.23.2\n",
     "pip install -q --upgrade PyYAML==6.0\n",
-    "pip install -q --upgrade sagemaker"
+    "pip install -q --upgrade sagemaker\n",
+    "pip install -q --upgrade ipytest"
    ]
   },
   {
@@ -243,12 +244,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c7b41df5-d6e7-4abe-a04d-8d390a3dea4f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:sagemaker:us-east-1:325223348818:studio-lifecycle-config/packages\n",
+      "{\n",
+      "    \"UserProfileArn\": \"arn:aws:sagemaker:us-east-1:325223348818:user-profile/d-givocgtibv1g/default-1682182522641\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$DOMAIN_ID\" \"$USER_PROFILE\"\n",
     "\n",
@@ -287,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "fb2699a8-1b33-454e-8b62-9b4a2df03bef",
    "metadata": {
     "tags": []
