--- a/penguins/studio-setup.ipynb
+++ b/penguins/studio-setup.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9e7cca6b-3ed1-4dfb-a570-a9d40eb531e0",
    "metadata": {
     "tags": []
@@ -117,8 +117,11 @@
     "            \"Effect\": \"Allow\",\n",
     "            \"Action\": [\n",
     "                \"iam:CreateRole\",\n",
+    "                \"iam:DeleteRole\",\n",
     "                \"iam:PassRole\",\n",
-    "                \"iam:AttachRolePolicy\"\n",
+    "                \"iam:AttachRolePolicy\",\n",
+    "                \"iam:DetachRolePolicy\",\n",
+    "                \"iam:CreatePolicy\"\n",
     "            ],\n",
     "            \"Resource\": \"*\"\n",
     "        },\n",
@@ -131,7 +134,9 @@
     "                \"lambda:InvokeFunctionUrl\",\n",
     "                \"lambda:InvokeFunction\",\n",
     "                \"lambda:UpdateFunctionCode\",\n",
-    "                \"lambda:InvokeAsync\"\n",
+    "                \"lambda:InvokeAsync\",\n",
+    "                \"lambda:AddPermission\",\n",
+    "                \"lambda:RemovePermission\"\n",
     "            ],\n",
     "            \"Resource\": \"*\"\n",
     "        },\n",
@@ -181,8 +186,46 @@
     "                \"s3:DeleteObject\"\n",
     "            ],\n",
     "            \"Resource\": \"arn:aws:s3:::*\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"Sid\": \"EventBridge\",\n",
+    "            \"Effect\": \"Allow\",\n",
+    "            \"Action\": [\n",
+    "                \"events:PutRule\",\n",
+    "                \"events:PutTargets\"\n",
+    "            ],\n",
+    "            \"Resource\": \"*\"\n",
     "        }\n",
     "    ]\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018a9140-93d0-400e-846f-ccbd1d17355a",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert\" style=\"background-color:#6e420c; color: #fff\"><strong>Note:</strong> \n",
+    "    Open the Amazon IAM service, find the role, go to the \"Trust relationships\" section and edit the configuration using the JSON below. Here, we want to ensure we have the \"events.amazonaws.com\" as part of the list of services.\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "\t\"Version\": \"2012-10-17\",\n",
+    "\t\"Statement\": [\n",
+    "\t\t{\n",
+    "\t\t\t\"Effect\": \"Allow\",\n",
+    "\t\t\t\"Principal\": {\n",
+    "\t\t\t\t\"Service\": [\n",
+    "                    \"sagemaker.amazonaws.com\", \n",
+    "                    \"events.amazonaws.com\"\n",
+    "                ]\n",
+    "\t\t\t},\n",
+    "\t\t\t\"Action\": \"sts:AssumeRole\"\n",
+    "\t\t}\n",
+    "\t]\n",
     "}\n",
     "```"
    ]
@@ -228,7 +271,7 @@
     "\n",
     "pip install -q --upgrade pip\n",
     "pip install -q --upgrade awscli boto3\n",
-    "pip install -q --upgrade scikit-learn==0.23.2\n",
+    "pip install -q --upgrade scikit-learn==1.3.1\n",
     "pip install -q --upgrade PyYAML==6.0\n",
     "pip install -q --upgrade sagemaker\n",
     "pip install -q --upgrade ipytest"
@@ -1026,7 +1069,6 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
    "language": "python",
