--- a/penguins/local-setup.ipynb
+++ b/penguins/local-setup.ipynb
@@ -27,18 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +69,9 @@
     "numpy\n",
     "pandas\n",
     "scikit-learn\n",
+    "plotly\n",
     "ipytest\n",
+    "tensorflow\n",
     "sagemaker\n",
     "sagemaker[local]"
    ]
@@ -92,11 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q -r {CODE_FOLDER}/requirements.txt"
+    "!pip install -q --upgrade pip\n",
+    "!pip install -q -r {CODE_FOLDER}/requirements.txt\n",
+    "!pip install -q --upgrade nbformat\n"
    ]
   },
   {
