--- a/penguins/local-setup.ipynb
+++ b/penguins/local-setup.ipynb
@@ -12,8 +12,11 @@
     "\n",
     "1. Create a virtual environment where you will install the required libraries. You want to configure the kernel of your notebook to use this virtual environment\n",
     "\n",
-    "   `$ python3 -m venv .venv`\n",
-    "\n",
+    "   ```bash\n",
+    "   $ python3 -m venv .venv\n",
+    "   $ source .venv/bin/activate\n",
+    "   ```\n",
+    "   \n",
     "2. Make sure you have Docker Desktop installed and running on your computer:\n",
     "\n",
     "   `$ docker ps`\n",
@@ -52,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: There was an error checking the latest version of pip.\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: There was an error checking the latest version of pip.\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "!pip install -q --upgrade pip\n",
     "!pip install -q -r {CODE_FOLDER}/requirements.txt\n",
