--- a/penguins/local-setup.ipynb
+++ b/penguins/local-setup.ipynb
@@ -113,12 +113,15 @@
    "source": [
     "## Docker Image for Apple M-series Chips\n",
     "\n",
-    "If you are working on a Mac with an M-series of chips, you need to build a docker image with the required libraries to train the model. Comment the cell magic on the following cell and run it."
+    "If you are working on a Mac with an M-series of chips, you need to build a docker image with the required libraries to train the model. Comment the cell magic on the following cell and run it.\n",
+    "\n",
+    "\n",
+    "<div class=\"alert\" style=\"background-color:#0066cc;\">Uncomment the <code style=\"background-color:#0066cc;\">%%script</code> cell magic line to execute this cell.</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
